--- a/CCS-SUBMISSION/sections/intro.tex
+++ b/CCS-SUBMISSION/sections/intro.tex
@@ -72,7 +72,7 @@ The key-homomorphic property of the one-time signature scheme ensures that the s
 Chipmunk follows this blueprint, but improves upon all building blocks that are being used and thereby significantly reduces the multi-signature size of Chipmunk.
 
 \paragraph{Key-Homomorphic One-Time Signatures.}
-Squirrel uses a key-homomorphic one-time signature scheme that is similar to those of Boneh and Kim~\cite{BonKim2020} and Lyubashevsky and Micciancio~\cite{TCC:LyuMic08}.
+Squirrel uses a key homomorphic one-time signature scheme that is similar to those of Boneh and Kim~\cite{BonKim2020} and Lyubashevsky and Micciancio~\cite{TCC:LyuMic08}.
 The details of the construction are not relevant for now.
 For Chipmunk, we use almost the exact same scheme, but observe by carefully inspecting their original security proof that a minor modification of their construction allows for their proof to produce much tighter parameters and thus smaller signatures.
 
