--- a/CCS-SUBMISSION/sections/onetimesig.tex
+++ b/CCS-SUBMISSION/sections/onetimesig.tex
@@ -70,19 +70,23 @@ The following definition of a multi-user version of (one-time) existential unfor
 \begin{definition}[Multi-User Existential Unforgeability under Rerandomized Keys]
   A $(\rho,W,\varepsilon)$-homomorphically correct KOTS is $W'$-existentially unforgeable under rerandomized keys (EUF-RK), if for all security parameters $\secpar$, any $T=\poly\in\NN$ and all stateful PPT algorithms $\adv$ it holds that
   \[
-    \Pr\mleft[
+    \begin{aligned}
+    &\Pr\mleft[
       \begin{aligned}
       \params \gets \setup(\secparam);\\
-      \forall i \in [T-1]\ldotp (\osk_i,\opk_i) \gets \kgen(\params);\\
-      (i^*,m^*,\sigma^*,w^*) \gets \adv^{\widetilde\sign(\cdot,\cdot)}(\params,\opk_0,\dots,\opk_{T-1});\\
+      \forall i \in [T]\ldotp (\osk_i,\opk_i) \gets \kgen(\params);\\
+      \begin{pmatrix}i^*,\\m^*,\\\sigma^*,\\w^*\end{pmatrix} \gets \adv^{\widetilde\sign(\cdot,\cdot)}(\params,\opk_1,...,\opk_{T});\\
 %      \sigma \gets \sign(\params,\osk,m);\\
 %      (m^*,\sigma^*,w_0^*,w_1^*) \gets \adv(\sigma)\\
-      \end{aligned}:
+      \end{aligned}:\!\!\!
       \begin{aligned}
-      \wverify(\params,w^*\cdot\opk_{i^*},m^*,\sigma^*) = 1\\
-      \land m^*\not\in Q_{i^*} \land \abs{Q_{i^*}}\leq 1 \land w^* \in W'
+      &\wverify\begin{pmatrix}\params,w^*\opk_{i^*},\\m^*,\sigma^*\end{pmatrix} = 1\\
+      &\land m^*\not\in Q_{i^*}\\
+      &\land \abs{Q_{i^*}}\leq 1 \land w^* \in W'
       \end{aligned}
-    \mright]\leq \negl,
+    \mright]\\
+    &\leq \negl,
+    \end{aligned}
   \]
   where the oracle $\widetilde\sign(\cdot,\cdot)$ is defined as $\widetilde\sign(i,m) := \sign(\osk_i,m)$ and $Q_i$ denotes the set of messages for which a signing query with index $i$ has been made.
 \end{definition}
@@ -153,7 +157,7 @@ Let $W' = \{w_0-w_1\mid w_0,w_1\in\tern_{\alpha_w} \land w_0\neq w_1\}$.
 If the $\sis_{\ring,q,\gamma,2\beta_\sigma+4\alpha_w\alpha_H\varphi}$ problem is hard and $H$ is collision resistant, then the construction from~\autoref{fig:otsconstruction} is an individually correct, $(\rho,\tern_{\alpha_w},\varepsilon)$-probabilistically homomorphic, robustly homomorphic KOTS that is $W'$-multi-user existentially unforgeable under rerandomized keys.
 \end{theorem}
 \begin{proof}
-The theorem follows from \autoref{lem:kots_ind_correct}, \autoref{lem:kots_correct}, \autoref{lem:kots_homomorphic}, and \autoref{lem:kots_sis}.\qed
+The theorem follows from \autoref{lem:kots_ind_correct}, \autoref{lem:kots_correct}, \autoref{lem:kots_homomorphic}, and \autoref{lem:kots_sis}.
 \end{proof}
 
 The following four lemmas state that our construction satisfies the desired homomorphic properties and that it is unforgeable.
@@ -180,7 +184,7 @@ Let $H : \bin^* \to \tern_{\alpha_H}$ be a hash function.
     \leq{}&\norm{\vec{s}_0}\cdot\norm{H(m)}_1 + \norm{\vec{s}_1} \tag{\autoref{lem:ternbound}}\\
     ={}&2\varphi\alpha_H \tag{Def. of $\kgen$}.
   \end{align*}
-  The lemma thus follows.\qed
+  The lemma thus follows.
 \end{proof}
 
 
@@ -223,7 +227,7 @@ Let $\secpar, \varepsilon, \alpha_w$, $\alpha_H$, $\varphi$, $\gamma$, $\rho$, $
   where $\abs{c_j}\leq 2\varphi\alpha_H$ and $b_j$ is chosen uniformly from $\{-1,1\}$.
   By linearity of expectation, the expected value of this sum is always zero and changing any summand can vary the sum by at most $4\varphi\alpha_H$. We can thus apply McDiarmid's inequality~\cite{McDiarmid89} and the lower bound on $\beta_\sigma$ from the lemma statement to obtain the following bound on the probability that each individual coefficient exceeds the norm bound $\beta_\sigma$:
   \begin{align*}
-    \Pr\Bigl[\vec{b}\gets\{-1,1\}^{\alpha_w\ell} : \Bigl|\smashoperator{\sum_{j=1}^{\alpha_w\ell}}b_j c_j\Bigr| > \beta_\sigma\Bigr]
+    &\Pr\Bigl[\vec{b}\gets\{-1,1\}^{\alpha_w\ell} : \Bigl|\smashoperator{\sum_{j=1}^{\alpha_w\ell}}b_j c_j\Bigr| > \beta_\sigma\Bigr]\\
     \leq{}& 2\cdot\exp\Bigl(-\frac{2\beta_\sigma^2}{\alpha_w\ell\cdot (4\varphi\alpha_H)^2}\Bigr)\\
     \leq{}& 2\cdot\exp\Bigl(-\frac{2\beta_\sigma^2}{\alpha_w\rho\cdot (4\varphi\alpha_H)^2}\Bigr)\\
     \leq{}& 2\cdot\exp\Bigl(-\frac{2(4\varphi\alpha_H)^2\cdot\tfrac{1}{2}\alpha_w\rho(\varepsilon+1+\log_2n\gamma)\cdot\ln2}{\alpha_w\rho\cdot (4\varphi\alpha_H)^2}\Bigr)\\
@@ -242,7 +246,7 @@ Let $\secpar, \varepsilon, \alpha_w$, $\alpha_H$, $\varphi$, $\gamma$, $\rho$, $
 \end{lemma}
 
 \begin{proof}
-  Let $\params\gets\setup(\secparam)$, $m\in\bin^*$, $\opk^0=(v^0_0,v^0_1),\opk^1=(v^1_0,v^1_1)\in \ring^2_q$, and $\vec{\sigma}^0,\vec{\sigma}^1 \in \ring_q^\gamma$ be arbitrary such that $\sverify(\params,\opk^0,m,\vec{\sigma}^0)=1$ and $\sverify(\params,\opk^1,m,\vec{\sigma}^1)=1$.
+  Let $\params\gets\setup(\secparam)$, $m\in\bin^*$, $\opk^0=(v^0_0,v^0_1),\opk^1=(v^1_0,v^1_1)\in \ring^2_q$, and $\vec{\sigma}^0,\vec{\sigma}^1 \in \ring_q^\gamma$ be arbitrary such that \[\sverify(\params,\opk^0,m,\vec{\sigma}^0)=1 \quad\text{and}\quad \sverify(\params,\opk^1,m,\vec{\sigma}^1)=1.\]
   
   By the definition of the strong verification algorithm, it holds that
   \begin{equation*}
@@ -258,7 +262,7 @@ Let $\secpar, \varepsilon, \alpha_w$, $\alpha_H$, $\varphi$, $\gamma$, $\rho$, $
     ={}& (v^0_0\cdot H(m) + v^0_1) - (v^1_0\cdot H(m) + v^1_1)\tag{Def of $\sverify$}\\
     ={}& (v^0_0-v^1_0)\cdot H(m) + (v^0_1-v^1_1).
   \end{align*}
-  Therefore, the lemma statement follows.\qed
+  Therefore, the lemma statement follows.
 \end{proof}
 
 
@@ -280,7 +284,7 @@ Let $\secpar, \varepsilon, \alpha_w$, $\alpha_H$, $\varphi$, $\gamma$, $\rho$, $
   I.e., at most a single query was asked for index $i^*$, said query was \emph{not} $m^*$, $w^*\in W'$ and $\wverify(\vec{a},(w^*v^{i^*}_0,w^*v^{i^*}_1),m^*,\allowbreak\vec{\sigma}^*)=1$.
   From this and the definition of $\vec{\sigma}'$ above it follows that
   \begin{align*}
-       \vec{a}^\intercal\cdot(\vec{\sigma}^*-\vec{\sigma}') ={}& \vec{a}^\intercal\vec{\sigma}^*-\vec{a}^\intercal\vec{\sigma}'\\ 
+       &\vec{a}^\intercal\cdot(\vec{\sigma}^*-\vec{\sigma}')\\ ={}& \vec{a}^\intercal\vec{\sigma}^*-\vec{a}^\intercal\vec{\sigma}'\\ 
     ={}& (w^*\cdot v^{i^*}_0 H(m) + w^*\cdot v^{i^*}_1) - \vec{a}^\intercal(w^*\cdot \vec{s}^{i^*}_0\cdot H(m^*)+ w^*\cdot\vec{s}^{i^*}_1)\\
     ={}& (w^*\cdot v^{i^*}_0 H(m) + w^*\cdot v^{i^*}_1) - (w^*\cdot\vec{a}^\intercal\vec{s}^{i^*}_0\cdot H(m^*)+ w^*\cdot\vec{a}^\intercal\vec{s}^{i^*}_1)\\
     ={}& (w^*\cdot v^{i^*}_0\cdot H(m) + w^*\cdot v^{i^*}_1) - (w^*\cdot v^{i^*}_0\cdot H(m) + w^*\cdot v^{i^*}_1) = 0.
@@ -306,7 +310,7 @@ Let $\secpar, \varepsilon, \alpha_w$, $\alpha_H$, $\varphi$, $\gamma$, $\rho$, $
   Once $\adv$ outputs a valid forgery $(i^*,m^*,\vec{\sigma}^*,w^*)$ the signing key used for the forgery becomes uniquely determined by \autoref{lem:nilssupportivechildsupport} as long as $H(m^*)\neq H(m)$ which is guaranteed with overwhelming probability by the collision resistance of $H$.
   It follows that $\sigma^* \neq \sigma'$ with probability at least $1/2 - \negl$.
   Therefore, the success probability of our reduction $\bdv$ is $(1/2 - \negl) \nu(\secpar)$ and since the SIS problem is assumed to be hard, $\nu(\secpar)$ must therefore be negligible in $\secpar$.
-  \qed
+  
 \end{proof}
 
 \begin{lemma}\label{lem:keyhidden}
@@ -334,7 +338,7 @@ Let $\secpar, \varepsilon, \alpha_w$, $\alpha_H$, $\varphi$, $\gamma$, $\rho$, $
   and thus, as claimed the domain of $f_{\vec{a},c}$ is at least $2^{3\secpar + \delta}$ times larger than its range.
   
   Using Lemma 4.1 from~\cite{TCC:LyuMic08}, the probability, over a uniformly chosen secret key, that there exists $(\vec{s}'_0,\vec{s}'_1)\in \ball_{1}^\gamma \times \ball_{\beta_s}^\gamma$ such that $(\vec{s}'_0,\vec{s}'_1)\neq(\vec{s}_0,\vec{s}_1)$, $(\vec{a}^\intercal\cdot\vec{s}'_0,\vec{a}^\intercal\cdot\vec{s}'_1) = (\vec{a}^\intercal\cdot\vec{s}_0,\vec{a}^\intercal\cdot\vec{s}_1)$ and $\vec{s}'_0\cdot c + \vec{s}'_1 = \vec{s}_0\cdot c + \vec{s}_1$ is at least $1-2^{-3\secpar-\delta}$.
-  By union bounding over all possible hash values $c \in \tern_{\alpha_H}$ and observing that $\tern_{\alpha_H} \leq 2^{2\secpar + \delta}$ the lemma statement follows. \qed
+  By union bounding over all possible hash values $c \in \tern_{\alpha_H}$ and observing that $\tern_{\alpha_H} \leq 2^{2\secpar + \delta}$ the lemma statement follows. 
 \end{proof}
 
 \begin{lemma}\label{lem:nilssupportivechildsupport}
@@ -362,10 +366,13 @@ Let $n,\gamma,q,\alpha_H, \alpha_w$ be positive integers with $q$ prime and $n$ 
     \end{equation}
     Since $w_0,w_1\in\tern_{\alpha_w}$, $\vec{s}_0,\vec{s}'_0 \in \ball^\gamma_{\varphi}$, and $c_0,c_1\in\tern_{\alpha_{H}}$, it holds by \autoref{lem:ternbound} that
     \[
-      \norm{(w_0 - w_1)(\vec{s}_0 - \vec{s}'_0) (c_0 - c_1)} \leq \norm{w_0 - w_1}_1\cdot\norm{c_0 - c_1}_1\cdot \norm{(\vec{s}_0 - \vec{s}'_0)} \leq 8\alpha_w\alpha_H\varphi \leq \frac{q-1}{2}.
+      \begin{aligned}
+      &\norm{(w_0 - w_1)(\vec{s}_0 - \vec{s}'_0) (c_0 - c_1)}\\
+       \leq& \norm{w_0 - w_1}_1\cdot\norm{c_0 - c_1}_1\cdot \norm{(\vec{s}_0 - \vec{s}'_0)}\\ \leq& 8\alpha_w\alpha_H\varphi \leq \frac{q-1}{2}.
+      \end{aligned}
     \]
     Therefore \autoref{herekittykitty} also holds in $\ring$.
     Since $w_0 \neq w_1$, $c_0 \neq c_1$, and $\ring$ is an integral domain, it follows that $\vec{s}_0 = \vec{s}'_0$.
     By Equation~\ref{hello}, it must therefore hold that $(\vec{s}_0, \vec{s}_1) = (\vec{s}'_0, \vec{s}'_1)$.
-    \qed
+    
 \end{proof}
