--- a/CCS-SUBMISSION/main.tex
+++ b/CCS-SUBMISSION/main.tex
@@ -123,6 +123,7 @@ We provide a full implementation of Chipmunk and provide extensive benchmarks st
 %\input{sections/appendix}
 \begin{appendix}
   \input{sections/appconstraints}
+  \input{sections/appproofs}
 \end{appendix}
 \end{document}
 
