--- a/CCS-SUBMISSION/sections/appproofs.tex
+++ b/CCS-SUBMISSION/sections/appproofs.tex
@@ -1,4 +1,4 @@
-\section{Proof of \autoref{theo:kots}}\label{app:proofs}
+\section{Proof of Theorem \ref{theo:kots}}\label{app:proofs}
 \begin{proof}
 The theorem follows from \autoref{lem:kots_ind_correct}, \autoref{lem:kots_correct}, \autoref{lem:kots_homomorphic}, and \autoref{lem:kots_sis}.
 \end{proof}
