--- a/CCS-SUBMISSION/sections/appconstraints.tex
+++ b/CCS-SUBMISSION/sections/appconstraints.tex
@@ -15,6 +15,8 @@
 % \caption{The constraints a set of Chipmunk parameters needs to satisfy.}\label{tab:constraints}
 % \end{table}
 \section{Concrete Parameters}
+
+We provide aggregate signature sizes for various parameter sets in~\autoref{tab:param}.
 % ┌──────────┬───────┬────────┬───────────┬───────────┬───────────┬─────────┬───────┬─────────┬──────────────┬──────────┬───────┬─────────────┬─────────┬─────────────┐
 % │   secpar │   tau │    rho │   epsilon │   alpha_w │   alpha_H │   delta │   phi │   gamma │   beta_sigma │   q_kots │   eta │   beta_open │   q_hvc │ size        │
 % ├──────────┼───────┼────────┼───────────┼───────────┼───────────┼─────────┼───────┼─────────┼──────────────┼──────────┼───────┼─────────────┼─────────┼─────────────┤
