Initial version of some thought on Ethereum application. NOTE: This is a preliminary version; in particular, it lacks some concrete data points. - also fixes a typo in multisig.tex

--- a/main.tex
+++ b/main.tex
@@ -118,6 +118,7 @@ We provide a full implementation of Chipmunk and provide extensive benchmarks st
 
 
 
+
 %% Bibliography
 \bibliographystyle{alpha}
 \bibliography{cryptobib/abbrev0,cryptobib/crypto,extraref}
@@ -126,6 +127,7 @@ We provide a full implementation of Chipmunk and provide extensive benchmarks st
 %\input{sections/appendix}
 \begin{appendix}
   \input{sections/appconstraints}
+  \input{sections/eth}
 \end{appendix}
 \end{document}
 
