update github link for eprint version

--- a/sections/benchmarks.tex
+++ b/sections/benchmarks.tex
@@ -2,7 +2,7 @@
 \subsection{Parameters and Security Estimations}
 The dimension of the ring $\ring$ is fixed to $n=512$.
 The constraints to derive workable parameters are summarized in Table \ref{tab:constraints}.
-To find concrete parameters, a script\footnote{\label{fn:github}\url{https://anonymous.4open.science/r/chipmunk-code-56E6}} was used to enumerate possible parameters subject to these constraints and additionally subject to leading to hard ring-SIS problems and allowing for efficient NTT evaluation.
+To find concrete parameters, a script\footnote{\label{fn:github}\url{https://github.com/GottfriedHerold/Chipmunk}} was used to enumerate possible parameters subject to these constraints and additionally subject to leading to hard ring-SIS problems and allowing for efficient NTT evaluation.
 For any choice of $\secpar\in\{112,128\}$, $\rho\in\NN$, and $\tau\in\NN$ this script then finds the parameter set that allow for the smallest possible signature size.
 For convenience, the results of running the script for a range of reasonable inputs are reproduced in \autoref{tab:param} in the appendix.
 \begin{table}
