made a pass over most of the paper.

--- a/commanddefs.tex
+++ b/commanddefs.tex
@@ -2,6 +2,9 @@
 \newcommandx*{\pcor}[2][1=\ ,2=\ ]{#1\highlightkeyword[#2]{or}}
 \newcommandx*{\pcand}[2][1=\ ,2=\ ]{#1\highlightkeyword[#2]{and}}
 
+% Math hyphen
+\mathchardef\mhyphen="2D
+
 \newcommand{\setup}{\mathsf{Setup}}
 \newcommand{\kgen}{\mathsf{KGen}}
 \newcommand{\sign}{\mathsf{Sign}}
