--- a/sections/prelim.tex
+++ b/sections/prelim.tex
@@ -16,7 +16,7 @@ A labeled full binary tree with labels in $X$ is represented by a labeling funct
 
 Let $\vec{v},\vec{u}$ be vectors.
 We write $\vec{v}^\intercal$ to denote the transpose of $\vec{v}$ and $v_i$ to denote the $i$-th entry in the vector for $i\in[\abs{\vec{v}}]$.
-We generalize this notation and write $\vec{v}_{< i}$ to denote the $i-1$-length prefix of $\vec{v}$.
+We generalize this notation and write $\vec{v}_{< i}$ to denote the $(i-1)$-length prefix of $\vec{v}$.
 We use the same notation for a bit-string $s$, denoting by $s_i$ the $i$-th bit and by $s_{<i}$ the prefix consisting of the first $i-1$ bits of $s$.
 From time to time we will slightly abuse this notation and use a bit-string $s$ as an index.
 In this case the index is to be understood as the canonical interpretation of $s$ as an integer in little-endian encoding.
