--- a/sections/veccom.tex
+++ b/sections/veccom.tex
@@ -1,16 +1,12 @@
 % !TEX root = ../main.tex
 \section{Homomorphic Vector Commitments}\label{sec:veccom}
 
-In this section, we define and instantiate the notion of a homomorphic vector commitment.
-A vector commitment in general allows to to commit to a very long vector with a very short commitment value.
-Positions in the vector can then be individually opened using a short opening value.
-
-Following very closely the definitions of~\cite{CCS:FleSimZha22} vector commitments are extended with homomorphic properties such that linear combination of commitments to different vectors will open to the linear combination of the entries of the individual vectors.
-
-Our definitions depart from \cite{CCS:FleSimZha22} in that we have incomparable requirements on the homomorphic properties.
-On the one hand, \cite{CCS:FleSimZha22} only requires that honestly generated have homomorphic properties whereas we have the stronger requirement that the homomorphism works for any individually verifying commitments and openings.
+In this section, we define and instantiate homomorphic vector commitments, which allow for committing to a long vector with a short commitment value.
+Positions in the vector can be individually opened using a short opening value.
+We closely follow the definitions for vector commitments of Fleischhacker, Simkin, and Zhang~\cite{CCS:FleSimZha22}, but we require somewhat different and incomparable homomorphic properties. 
+The definition of \cite{CCS:FleSimZha22} only requires honestly generated commitments to have homomorphic properties, whereas our definition requires the homomorphism to work for any individually verifying commitments and openings.
 On the other hand, \cite{CCS:FleSimZha22} requires that the homomorphism works with probability $1$, whereas we allow some noticeable error.
-This weakening, among other changes, allows us to instantiate the primitive more compactly.
+Among other things, this modification of the definition allows us to instantiate homomorphic vector commitments more compactly.
 
 \begin{definition}\label{def:hvc}
   Let $\ring$ be a ring and let $q,q',\tau\in\NN$.
@@ -279,7 +275,7 @@ Therefore it only remains to verify that the norm-checks go through with suffici
     \mright] \leq 2^{-\varepsilon}
   \]
   
-  To bound this probability, consider that the norm-bound is violated iff the absolute value of at least one of the $n(2\tau\lceil\log_{2\eta+1} q\rceil  + \xi\lceil\log_{2\eta+1} q'\rceil)$ coefficients in one of the sums $\sum_{i=1}^{\ell} w^i\cdot\vec{p}^i$, $\sum_{i=1}^{\ell} w^i\cdot\vec{s}^i$, and $\sum_{i=1}^{\ell} w^i\cdot\vec{u}^i$ is greater than $\bagg$.
+  To bound this probability, consider that the norm-bound is violated, iff the absolute value of at least one of the $n(2\tau\lceil\log_{2\eta+1} q\rceil  + \xi\lceil\log_{2\eta+1} q'\rceil)$ coefficients in one of the sums $\sum_{i=1}^{\ell} w^i\cdot\vec{p}^i$, $\sum_{i=1}^{\ell} w^i\cdot\vec{s}^i$, and $\sum_{i=1}^{\ell} w^i\cdot\vec{u}^i$ is greater than $\bagg$.
   By a union bound it is thus sufficient to show that each individual coefficient violates the bound with probability at most $2^{-\varepsilon}/(n(2\tau\lceil\log_{2\eta+1} q\rceil + \xi\lceil\log_{2\eta+1} q'\rceil))$.
   
   For each individual $\vec{p}^i$, $\vec{s}^i$, $\vec{u}^i$ it holds by the definition of $\iverify$ that
@@ -319,7 +315,7 @@ Therefore it only remains to verify that the norm-checks go through with suffici
 \end{lemma}
 \begin{proof}
 The proof of this lemma is taken almost verbatim from \cite{CCS:FleSimZha22}.
-It deviates only insofar as the full construction and proof was split in two in \cite{CCS:FleSimZha22}, whereas is is combined here.
+It deviates only insofar as the full construction and proof was split in two in \cite{CCS:FleSimZha22}, whereas it is combined in one here.
 Since the proof is short, we include it here for the sake of completeness.
 Let $\vec{c}^0,\vec{c}^1 \in \ring_q^\comlen$, and $\vec{d}^0, \vec{d}^1 \in \ring_q^\oplen$, and $t\in[2^\tau]$ be arbitrary, such that
 \begin{equation}
@@ -358,7 +354,6 @@ and $j \in [\tau]$ that the following two conditions hold
   \[
       \norm{\vec{u}^0-\vec{u}^1} \leq \norm{\vec{u}^0} + \norm{\vec{u}^1} \leq 2\bagg.
   \]
-  
   From \autoref{eq:robhompathcheck} and \autoref{eq:robhompaycheck} and the linearity of $\proj_q$ it follows that for all $j \in [\tau]$
   \begin{align*}
     \proj_q(\vec{p}^0_{j-1}-\vec{p}^1_{j-1})
